Fix header on mobile safari

--- a/src/components/Header/Header.mod.scss
+++ b/src/components/Header/Header.mod.scss
@@ -6,6 +6,7 @@ $outline: lighten(#c9d6cd, 6%);
   position: sticky;
   top: 0;
   background: white;
+  min-height: 30px;
   height: 53px;
   display: flex;
   align-items: center;
